
noinst_PROGRAMS = \
	antialias ao_waveform ao_mmap apply_cal board_info choose_clock choose_filter \
	choose_routing cmd do_waveform dio eeprom_dump gpct_buffered_counting \
	gpct_encoder gpct_pulse_generator \
	gpct_simple_counting inp inpn insn ledclock \
	mmap outp poll receiver select \
	sender sigio sv tut1 tut2

noinst_HEADERS = examples.h

antialias_SOURCES = antialias.c common.c
antialias_CFLAGS = $(COMEDILIB_CFLAGS)
antialias_LDADD = $(COMEDILIB_LIBS)

ao_waveform_SOURCES = ao_waveform.c common.c
ao_waveform_CFLAGS = $(COMEDILIB_CFLAGS)
ao_waveform_LDADD = $(COMEDILIB_LIBS)

ao_mmap_SOURCES = ao_mmap.c common.c
ao_mmap_CFLAGS = $(COMEDILIB_CFLAGS)
ao_mmap_LDADD = $(COMEDILIB_LIBS)

apply_cal_SOURCES = apply_cal.c common.c
apply_cal_CFLAGS = $(COMEDILIB_CFLAGS)
apply_cal_LDADD = $(COMEDILIB_LIBS)

board_info_SOURCES = info.c common.c
board_info_CFLAGS = $(COMEDILIB_CFLAGS)
board_info_LDADD = $(COMEDILIB_LIBS)

choose_clock_SOURCES = choose_clock.c common.c
choose_clock_CFLAGS = $(COMEDILIB_CFLAGS)
choose_clock_LDADD = $(COMEDILIB_LIBS)

choose_filter_SOURCES = choose_filter.c common.c
choose_filter_CFLAGS = $(COMEDILIB_CFLAGS)
choose_filter_LDADD = $(COMEDILIB_LIBS)

choose_routing_SOURCES = choose_routing.c common.c
choose_routing_CFLAGS = $(COMEDILIB_CFLAGS)
choose_routing_LDADD = $(COMEDILIB_LIBS)

cmd_SOURCES = cmd.c common.c
cmd_CFLAGS = $(COMEDILIB_CFLAGS)
cmd_LDADD = $(COMEDILIB_LIBS)

dio_SOURCES = dio.c common.c
dio_CFLAGS = $(COMEDILIB_CFLAGS)
dio_LDADD = $(COMEDILIB_LIBS)

do_waveform_SOURCES = do_waveform.c common.c
do_waveform_CFLAGS = $(COMEDILIB_CFLAGS)
do_waveform_LDADD = $(COMEDILIB_LIBS)

eeprom_dump_SOURCES = eeprom_dump.c common.c
eeprom_dump_CFLAGS = $(COMEDILIB_CFLAGS)
eeprom_dump_LDADD = $(COMEDILIB_LIBS)

gpct_buffered_counting_SOURCES = gpct_buffered_counting.c common.c
gpct_buffered_counting_CFLAGS = $(COMEDILIB_CFLAGS)
gpct_buffered_counting_LDADD = $(COMEDILIB_LIBS)

gpct_encoder_SOURCES = gpct_encoder.c common.c
gpct_encoder_CFLAGS = $(COMEDILIB_CFLAGS)
gpct_encoder_LDADD = $(COMEDILIB_LIBS)

gpct_pulse_generator_SOURCES = gpct_pulse_generator.c common.c
gpct_pulse_generator_CFLAGS = $(COMEDILIB_CFLAGS)
gpct_pulse_generator_LDADD = $(COMEDILIB_LIBS)

gpct_simple_counting_SOURCES = gpct_simple_counting.c common.c
gpct_simple_counting_CFLAGS = $(COMEDILIB_CFLAGS)
gpct_simple_counting_LDADD = $(COMEDILIB_LIBS)

inp_SOURCES = inp.c common.c
inp_CFLAGS = $(COMEDILIB_CFLAGS)
inp_LDADD = $(COMEDILIB_LIBS)

inpn_SOURCES = inpn.c common.c
inpn_CFLAGS = $(COMEDILIB_CFLAGS)
inpn_LDADD = $(COMEDILIB_LIBS)

insn_SOURCES = insn.c common.c
insn_CFLAGS = $(COMEDILIB_CFLAGS)
insn_LDADD = $(COMEDILIB_LIBS)

ledclock_SOURCES = ledclock.c common.c
ledclock_CFLAGS = $(COMEDILIB_CFLAGS)
ledclock_LDADD = $(COMEDILIB_LIBS)

mmap_SOURCES = mmap.c common.c
mmap_CFLAGS = $(COMEDILIB_CFLAGS)
mmap_LDADD = $(COMEDILIB_LIBS)

outp_SOURCES = outp.c common.c
outp_CFLAGS = $(COMEDILIB_CFLAGS)
outp_LDADD = $(COMEDILIB_LIBS)

poll_SOURCES = poll.c common.c
poll_CFLAGS = $(COMEDILIB_CFLAGS)
poll_LDADD = $(COMEDILIB_LIBS)

receiver_SOURCES = receiver.c common.c
receiver_CFLAGS = $(COMEDILIB_CFLAGS)
receiver_LDADD = $(COMEDILIB_LIBS)

select_SOURCES = select.c common.c
select_CFLAGS = $(COMEDILIB_CFLAGS)
select_LDADD = $(COMEDILIB_LIBS)

sender_SOURCES = sender.c common.c
sender_CFLAGS = $(COMEDILIB_CFLAGS)
sender_LDADD = $(COMEDILIB_LIBS)

sigio_SOURCES = sigio.c common.c
sigio_CFLAGS = $(COMEDILIB_CFLAGS)
sigio_LDADD = $(COMEDILIB_LIBS)

sv_SOURCES = sv.c common.c
sv_CFLAGS = $(COMEDILIB_CFLAGS)
sv_LDADD = $(COMEDILIB_LIBS)

tut1_SOURCES = tut1.c
tut1_CFLAGS = $(COMEDILIB_CFLAGS)
tut1_LDADD = $(COMEDILIB_LIBS)

tut2_SOURCES = tut2.c
tut2_CFLAGS = $(COMEDILIB_CFLAGS)
tut2_LDADD = $(COMEDILIB_LIBS)


