CLEANFILES = *~
DISTCLEANFILES =
MAINTAINERCLEANFILES = Makefile.in

include $(top_srcdir)/Makefile.buildvars

pkglib_LTLIBRARIES = librtdsp.la

librtdsp_la_LDFLAGS = -lgsl -lgslcblas -lm -ldl -lpthread -lGL -shared

librtdsp_la_SOURCES = \
		abstmath.cpp \
		acosh.cpp \
		adap_fir.cpp \
		anlgfilt.cpp \
		anlg_rcn.cpp \
		ar_est.cpp \
		arma_est.cpp \
		armaproc.cpp \
		armaspec.cpp \
		arma_src.cpp \
		ar_proc.cpp \
		arsigsrc.cpp \
		arspec.cpp \
		ar_src.cpp \
		autometh.cpp \
		bartpdgm.cpp \
		bessel.cpp \
		bessfunc.cpp \
		bilinear.cpp \
		bitrev.cpp \
		burg.cpp \
		buttfunc.cpp \
		cbitrev.cpp \
		chebfunc.cpp \
		cholesky.cpp \
		cmpxpoly.cpp \
		complex.cpp \
		con_hamm.cpp \
		con_hann.cpp \
		con_rect.cpp \
		con_resp.cpp \
		con_tngl.cpp \
		covmeth.cpp \
		cpfsk.cpp \
		croscorr.cpp \
		dan_pdgm.cpp \
		dif_niso.cpp \
		dif_sino.cpp \
		dir1_iir.cpp \
		dirform1.cpp \
		dit_niso.cpp \
		dit_sino.cpp \
		dolph.cpp \
		elipfunc.cpp \
		fft.cpp \
		filtfunc.cpp \
		filtmath.cpp \
		fir_dsgn.cpp \
		firideal.cpp \
		fir_resp.cpp \
		fs_dsgn.cpp \
		fsk_spec.cpp \
		fs_resp.cpp \
		fs_spec.cpp \
		fs_util.cpp \
		gausrand.cpp \
		gen_lev.cpp \
		gen_win.cpp \
		goldsrch.cpp \
		goldsrh2.cpp \
		hamming.cpp \
		hann.cpp \
		iir_dsgn.cpp \
		iir_resp.cpp \
		iirswept.cpp \
		impinvar.cpp \
		impresp.cpp \
		kaiser.cpp \
		laguerre.cpp \
		learncur.cpp \
		levin.cpp \
		lin_dsgn.cpp \
		lin_resp.cpp \
		lms_filt.cpp \
		log2.cpp \
		ma_est.cpp \
		ma_proc.cpp \
		ma_src.cpp \
		matrix_t.cpp \
		mod_yuwa.cpp \
		mr_lpf.cpp \
		msdcost.cpp \
		msmrcost.cpp \
		numinteg.cpp \
		optmiz2.cpp \
		pause.cpp \
		polefilt.cpp \
		polefunc.cpp \
		poly.cpp \
		polydiv.cpp \
		psd_est.cpp \
		pzfilt.cpp \
		rectnglr.cpp \
		remezalg.cpp \
		rls_filt.cpp \
		sam_spec.cpp \
		sb_peak.cpp \
		sd_theor.cpp \
		sinawgn.cpp \
		sinc.cpp \
		sincsqrd.cpp \
		stepresp.cpp \
		stpinvar.cpp \
		swept.cpp \
		toeplitz.cpp \
		trianglr.cpp \
		uni_rand.cpp \
		unq_iir.cpp \
		unwrap.cpp \
		vector_t.cpp \
		welcpdgm.cpp \
		yulewalk.cpp 
