CLEANFILES = *~
DISTCLEANFILES =
MAINTAINERCLEANFILES = Makefile.in

include $(top_srcdir)/Makefile.buildvars

dspincludedir = $(pkgincludedir)/libs/DSP

dsplibdir = $(pkglibdir)/libs

dspinclude_HEADERS = \
		abstmath.h \
		acosh.h \
		adap_fir.h \
		adaptype.h \
		anlgfilt.h \
		anlg_rcn.h \
		ar_est.h \
		arma_est.h \
		armaproc.h \
		armaspec.h \
		arma_src.h \
		ar_proc.h \
		arsigsrc.h \
		arspec.h \
		ar_src.h \
		autometh.h \
		bartpdgm.h \
		bessel.h \
		bessfunc.h \
		bilinear.h \
		bitrev.h \
		burg.h \
		buttfunc.h \
		cbitrev.h \
		chebfunc.h \
		cholesky.h \
		cmpxpoly.h \
		complex.h \
		con_hamm.h \
		con_hann.h \
		con_rect.h \
		con_resp.h \
		con_tngl.h \
		covmeth.h \
		cpfsk.h \
		croscorr.h \
		dan_pdgm.h \
		dif_niso.h \
		dif_sino.h \
		dir1_iir.h \
		dirform1.h \
		dit_niso.h \
		dit_sino.h \
		dolph.h \
		elipfunc.h \
		fft.h \
		filtfunc.h \
		filt_imp.h \
		filtmath.h \
		fir_dsgn.h \
		firideal.h \
		fir_resp.h \
		fs_dsgn.h \
		fsk_spec.h \
		fs_resp.h \
		fs_spec.h \
		fs_util.h \
		gausrand.h \
		gen_lev.h \
		gen_win.h \
		goldsrch.h \
		goldsrh2.h \
		hamming.h \
		hann.h \
		iir_dsgn.h \
		iir_resp.h \
		iirswept.h \
		impinvar.h \
		impresp.h \
		kaiser.h \
		laguerre.h \
		learncur.h \
		levin.h \
		lin_dsgn.h \
		lin_resp.h \
		lms_filt.h \
		log2.h \
		ma_est.h \
		ma_proc.h \
		ma_src.h \
		matrix.h \
		matrix_t.h \
		misdefs.h \
		mod_yuwa.h \
		mr_lpf.h \
		msdcost.h \
		msmrcost.h \
		numinteg.h \
		optmiz2.h \
		overload.h \
		pause.h \
		polefilt.h \
		polefunc.h \
		polydiv.h \
		poly.h \
		psd_est.h \
		pzfilt.h \
		rectnglr.h \
		remezalg.h \
		rls_filt.h \
		sam_spec.h \
		sb_peak.h \
		sd_theor.h \
		sig_src.h \
		sig_type.h \
		sinawgn.h \
		sinc.h \
		sincsqrd.h \
		stepresp.h \
		stpinvar.h \
		swept.h \
		thy_spec.h \
		toeplitz.h \
		trianglr.h \
		typedefs.h \
		uni_rand.h \
		unq_iir.h \
		unwrap.h \
		vector_t.h \
		welcpdgm.h \
		yulewalk.h

dsplib_LTLIBRARIES = librtdsp.la

librtdsp_la_LDFLAGS = -lgsl -lgslcblas -lm -ldl -lpthread -lGL -shared -avoid-version

librtdsp_la_SOURCES = \
		abstmath.cpp \
		acosh.cpp \
		adap_fir.cpp \
		anlgfilt.cpp \
		anlg_rcn.cpp \
		ar_est.cpp \
		arma_est.cpp \
		armaproc.cpp \
		armaspec.cpp \
		arma_src.cpp \
		ar_proc.cpp \
		arsigsrc.cpp \
		arspec.cpp \
		ar_src.cpp \
		autometh.cpp \
		bartpdgm.cpp \
		bessel.cpp \
		bessfunc.cpp \
		bilinear.cpp \
		bitrev.cpp \
		burg.cpp \
		buttfunc.cpp \
		cbitrev.cpp \
		chebfunc.cpp \
		cholesky.cpp \
		cmpxpoly.cpp \
		complex.cpp \
		con_hamm.cpp \
		con_hann.cpp \
		con_rect.cpp \
		con_resp.cpp \
		con_tngl.cpp \
		covmeth.cpp \
		cpfsk.cpp \
		croscorr.cpp \
		dan_pdgm.cpp \
		dif_niso.cpp \
		dif_sino.cpp \
		dir1_iir.cpp \
		dirform1.cpp \
		dit_niso.cpp \
		dit_sino.cpp \
		dolph.cpp \
		elipfunc.cpp \
		fft.cpp \
		filtfunc.cpp \
		filtmath.cpp \
		fir_dsgn.cpp \
		firideal.cpp \
		fir_resp.cpp \
		fs_dsgn.cpp \
		fsk_spec.cpp \
		fs_resp.cpp \
		fs_spec.cpp \
		fs_util.cpp \
		gausrand.cpp \
		gen_lev.cpp \
		gen_win.cpp \
		goldsrch.cpp \
		goldsrh2.cpp \
		hamming.cpp \
		hann.cpp \
		iir_dsgn.cpp \
		iir_resp.cpp \
		iirswept.cpp \
		impinvar.cpp \
		impresp.cpp \
		kaiser.cpp \
		laguerre.cpp \
		learncur.cpp \
		levin.cpp \
		lin_dsgn.cpp \
		lin_resp.cpp \
		lms_filt.cpp \
		log2.cpp \
		ma_est.cpp \
		ma_proc.cpp \
		ma_src.cpp \
		matrix_t.cpp \
		mod_yuwa.cpp \
		mr_lpf.cpp \
		msdcost.cpp \
		msmrcost.cpp \
		numinteg.cpp \
		optmiz2.cpp \
		pause.cpp \
		polefilt.cpp \
		polefunc.cpp \
		poly.cpp \
		polydiv.cpp \
		psd_est.cpp \
		pzfilt.cpp \
		rectnglr.cpp \
		remezalg.cpp \
		rls_filt.cpp \
		sam_spec.cpp \
		sb_peak.cpp \
		sd_theor.cpp \
		sinawgn.cpp \
		sinc.cpp \
		sincsqrd.cpp \
		stepresp.cpp \
		stpinvar.cpp \
		swept.cpp \
		toeplitz.cpp \
		trianglr.cpp \
		uni_rand.cpp \
		unq_iir.cpp \
		unwrap.cpp \
		vector_t.cpp \
		welcpdgm.cpp \
		yulewalk.cpp 
